[package]
name = "affably"
version = "0.1.0"
authors = ["Levi Notik <affably@levinotik.com>"]
description = "A pleasantly easy and warmly polite web framework"
repository = "https://github.com/levinotik/affably.git"
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["mvc", "http", "web", "framework", "async"]
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]


[dependencies]
